--- a/package.json
+++ b/package.json
@@ -1,41 +1,33 @@
 {
-	"name": "online-notepad",
-	"version": "0.1.0",
-	"private": true,
-	"dependencies": {
-		"cra-template": "1.2.0",
-		"draft-js": "^0.11.7",
-		"react": "^18.0.0",
-		"react-dom": "^18.0.0",
-		"react-draft-wysiwyg": "^1.15.0",
-		"react-router": "^7.1.4",
-		"react-router-dom": "^7.1.4",
-		"react-scripts": "5.0.1",
-		"sass": "^1.83.4",
-		"socket.io-client": "^4.8.1"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	}
+  "name": "online-notepad",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite --host --open",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview --host --open"
+  },
+  "dependencies": {
+    "@ckeditor/ckeditor5-react": "^9.4.0",
+    "@tailwindcss/vite": "^4.0.2",
+    "ckeditor5": "^44.1.0",
+    "firebase": "^11.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.0.2"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.19.0",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.19.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.18",
+    "typescript": "~5.7.3",
+    "typescript-eslint": "^8.22.0",
+    "vite": "^6.0.11"
+  }
 }
