--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite --host --open",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview --host --open"
+    "preview": "vite preview --host --open",
+    "deploy": "bun run build && firebase deploy --only hosting:scrip"
   },
   "dependencies": {
     "@ckeditor/ckeditor5-react": "^9.4.0",
